# suzuya

./: .env  .env.sample  Cargo.toml  Dockerfile.app  Dockerfile.db  README.md  docker-compose.yml  heroku.yml  reset.sh  sample_data.sql
client/: Cargo.toml  index.html  style.scss
client/client/src/components/: maker_delete_button.rs
client/src/: common.rs  components.rs  lib.rs  main.rs  model.rs  pages.rs  settings.rs
client/src/common/: api.rs  date_util.rs  select.rs
client/src/components/: common.rs  input.rs  item.rs  item_detail.rs  maker.rs  maker_delete_button.rs  maker_save_button.rs  select_box.rs  text_box.rs  worker.rs
client/src/components/common/: header_link.rs  select_box.rs  select_user_maker.rs  select_worker_maker.rs  text_box.rs
client/src/components/item/: item_delete_button.rs  item_detail.rs  monthly_field.rs
client/src/components/maker/: maker_add_button.rs  maker_delete_button.rs  maker_save_button.rs
client/src/components/worker/: worker_add_button.rs  worker_delete_button.rs  worker_save_button.rs
client/src/model/: common.rs  edit_item.rs  item_page.rs  maker_page.rs  worker_page.rs
client/src/pages/: edit_item.rs  home.rs  item.rs  maker.rs  worker.rs
client/src/pages/item/: edit_item.rs  item_edit.rs  item_list.rs  item_new.rs
client/src/pages/maker/: maker_list.rs
client/src/pages/worker/: worker_list.rs
client/src/settings/: select.rs
entity/src/: item.rs  lib.rs  maker.rs  user.rs
migration/src/: lib.rs  m20220101_000001_create_item_table.rs  m20220101_000001_create_user_table.rs  m20220425_130000_create_user_table.rs  m20220503_000001_create_item_table.rs  m20220512_233538_add_deleted_column_to_makers_table.rs
server/: .env  .env.sample  Cargo.toml  README.md  master_data.sql  sample_data.sql
server/entity/: Cargo.toml
server/entity/src/: item.rs  item_category.rs  lib.rs  maker.rs  title.rs  user.rs  worker.rs
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20220101_000001_create_item_category_table.rs  m20220101_000001_create_item_table.rs  m20220101_000001_create_maker_table.rs  m20220101_000001_create_table.rs  m20220425_120000_create_maker_table.rs  m20221017_030456_maker.rs  m20221017_030528_title.rs  m20221017_223732_worker.rs  m20221017_224042_item.rs  m20221105_071832_add_resubmission_line_to_item.rs  m20221106_033801_add_updated_at_to_title.rs  m20230925_040135_change_double_check.rs  m20230925_043402_add_title_column.rs
server/src/: item.rs  lib.rs  main.rs  maker.rs  setting.rs  worker.rs
server/src/model/: item.rs
server/static/css/: skeleton.css  style.css
server/templates/: data.html.tera  index.html.tera  new.html.tera  side_menu.html.tera
server/templates/item/: edit_item.html.tera  item_list.html.tera
server/templates/maker/: edit_maker.html.tera  new_maker.html.tera
server/templates/user/: new_user.html.tera  user_list.html.tera
src/: item.rs  item_category.rs  lib.rs  login.rs  main.rs  maker.rs  redirect.rs  setting.rs  top.rs  user.rs
static/css/: skeleton.css  style.css
templates/: edit_item.html.tera  edit_item_category.html.tera  edit_maker.html.tera  edit_user.html.tera  item_category_list.html.tera  item_list.html.tera  layout.html.tera  login.html.tera  maker_list.html.tera  new_item.html.tera  new_item_category.html.tera  new_maker.html.tera  new_user.html.tera  side_menu.html.tera  user_list.html.tera
(+11 files in other folders)
