[package]
edition = "2021"
name = "suzuya"
publish = false
version = "0.1.0"
[dependencies]
actix-files = "0.6"
actix-http = "3"
actix-rt = "2.7"
actix-service = "2"
actix-web = "4"
dotenv = "0.15"
listenfd = "0.5"
serde = "1"
tera = "1.15.0"

[dependencies.sea-orm]
version = "^0.7.0"
features = [
    "macros",
    "debug-print",
    "runtime-actix-native-tls",
    "sqlx-postgres"
]

[dependencies.entity]
path = "entity"

[dependencies.migration]
path = "migration"

[dependencies.tracing-subscriber]
features = ["env-filter"]
version = "0.3"

[workspace]
members = [".", "entity", "migration"]
