[package]
edition = "2021"
name = "client"
version = "0.1.0"

[dependencies]
chrono="*"
chrono-tz="*"
reqwasm = "0.2"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
urlencoding="2.1.0"
wasm-bindgen="0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
yew = "0.19"
yew-router = "0.16"

[dependencies.serde]
features = ["derive"]
version = "1.0"
