[package]
edition = "2021"
name = "client"
version = "0.1.0"
[dependencies]
js-sys = "0.3.60"
reqwasm = "0.2"
serde_json = "1"
urlencoding = "2.1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
yew = "0.19"
yew-router = "0.16"
regex = "1.6.0"
log = "0.4.20"
wasm-logger = "0.2.0"

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
