[package]
edition = "2021"
name = "suzuya"
publish = false
version = "0.1.0"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-cors = "0.6"
actix-files = "0.6"
actix-web = "4"
chrono = "0.4.19"
dotenv = "0.15"
listenfd = "0.5"
serde = "1"
tera = "1.15.0"

[dependencies.entity]
path = "entity"

[dependencies.migration]
path = "migration"

[dependencies.sea-orm]
features = [
    "macros",
    "debug-print",
    "runtime-actix-native-tls",
    "sqlx-postgres",
]
version = "^0.9"

[dependencies.tracing-subscriber]
features = ["env-filter"]
version = "0.3"

[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }
